# api/dto/category.go
@@ -5,18 +5,20 @@ import (
 )
 
 type CategoryDTO struct {
-	ID   uint   `json:"id"`
-	Name string `json:"name" validate:"required"`
+	ID     uint   `json:"id"`
+	Name   string `json:"name" validate:"required,max=50"`
+	Active bool   `json:"active" validate:"boolean"`
 }
 
 func (d CategoryDTO) ParseToEntity() *domain.Category {
-	return domain.NewCategory(d.ID, d.Name)
+	return domain.NewCategory(d.ID, d.Name, d.Active)
 }
 
 func FromEntity(category domain.Category) *CategoryDTO {
 	return &CategoryDTO{
-		ID:   category.ID,
-		Name: category.Name,
+		ID:     category.ID,
+		Name:   category.Name,
+		Active: category.Active,
 	}
 }
 
@@ -24,8 +26,9 @@ func FromEntities(categories []domain.Category) []CategoryDTO {
 	categoriesDTO := make([]CategoryDTO, len(categories))
 	for i, category := range categories {
 		categoriesDTO[i] = CategoryDTO{
-			ID:   category.ID,
-			Name: category.Name,
+			ID:     category.ID,
+			Name:   category.Name,
+			Active: category.Active,
 		}
 	}
 	return categoriesDTO
