# docs/swagger.json
@@ -241,11 +241,15 @@
                 "name"
             ],
             "properties": {
+                "active": {
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         }
